--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
     <title>Документ</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -27,6 +27,7 @@
             class="menu-button"
             aria-expanded="false"
             aria-controls="menu-container"
+            data-menu-button
           >
             <svg
               class="menu-icons"
@@ -44,7 +45,7 @@
               ></use>
             </svg>
 
-            <div class="menu-container" id="menu-container"></div>
+            <div class="menu-container" id="menu-container" data-menu></div>
           </button>
 
           <ul class="list site-nav">
@@ -560,6 +561,7 @@
         </form>
       </div>
     </div>
+    <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
